[gd_scene load_steps=53 format=3 uid="uid://bw6vohyqylqwb"]

[ext_resource type="PackedScene" uid="uid://cjmdtp4mv5wgy" path="res://Scenes/base_classes/navigable_entity.tscn" id="1_hc1ri"]
[ext_resource type="Texture2D" uid="uid://bkyv43yst1mn7" path="res://Assets/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="2_qyj24"]
[ext_resource type="Script" path="res://Scenes/Units/knight1.gd" id="2_td7e1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8jnwd"]
radius = 66.0076

[sub_resource type="CircleShape2D" id="CircleShape2D_3cdsp"]
radius = 22.0907

[sub_resource type="AtlasTexture" id="AtlasTexture_s8sgr"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a2xt"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0y0k"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh10l"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bswq7"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bmey"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqfh3"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf6sv"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3hcp"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0d5"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g55yt"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lcky"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwthq"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rqtj"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jbu4"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_20k70"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tpcc"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eua4f"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg5aw"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x22we"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qj43"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8twc"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5foq"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t07e8"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uc52"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd1yd"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sstwf"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1va2n"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1pli"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8323"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_442ar"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvv6c"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn8q4"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyw26"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv0ge"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex56s"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4rym"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiysj"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1p55"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1f8f"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_utimg"]
atlas = ExtResource("2_qyj24")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj3wh"]
atlas = ExtResource("2_qyj24")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mowye"]
atlas = ExtResource("2_qyj24")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m62nn"]
atlas = ExtResource("2_qyj24")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg4s3"]
atlas = ExtResource("2_qyj24")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw2xu"]
atlas = ExtResource("2_qyj24")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ong15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8sgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a2xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0y0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh10l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bswq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bmey")
}],
"loop": false,
"name": &"attack_down_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqfh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf6sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3hcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g55yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lcky")
}],
"loop": false,
"name": &"attack_down_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwthq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rqtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jbu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20k70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tpcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eua4f")
}],
"loop": false,
"name": &"attack_right_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x22we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qj43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8twc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5foq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t07e8")
}],
"loop": false,
"name": &"attack_right_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uc52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd1yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sstwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1va2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1pli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8323")
}],
"loop": false,
"name": &"attack_top_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_442ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvv6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn8q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyw26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv0ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex56s")
}],
"loop": false,
"name": &"attack_top_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4rym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiysj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1p55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1f8f")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utimg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj3wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mowye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m62nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg4s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw2xu")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[node name="Knight" groups=["Units"] instance=ExtResource("1_hc1ri")]
collision_mask = 15
script = ExtResource("2_td7e1")

[node name="NavigationAgent2D" parent="." index="0"]
debug_enabled = true

[node name="AttackCooldown" type="Timer" parent="Timers" index="1"]
wait_time = 1.5
one_shot = true

[node name="AttackArea" type="Area2D" parent="." index="2"]
collision_layer = 8
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]
shape = SubResource("CircleShape2D_8jnwd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
shape = SubResource("CircleShape2D_3cdsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="4"]
position = Vector2(1, -2)
sprite_frames = SubResource("SpriteFrames_ong15")
animation = &"idle"
autoplay = "idle"

[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
